--- a/src/App.css
+++ b/src/App.css
@@ -22,3 +22,48 @@ input[type='radio'].visually-hidden {
   clip: rect(0 0 0 0);
   overflow: hidden;
 }
+
+button {
+  padding-top: 5px;
+  padding-right: 10px;
+  padding-bottom: 5px;
+  padding-left: 10px;
+  background-color: #fff;
+  border: 1px solid rgb(72, 72, 241);
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: rgb(213, 213, 255);
+}
+
+.settings-list {
+  display: flex;
+  justify-content: center;
+  gap: 5px;
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+  margin-top: 1px;
+}
+
+input {
+  outline: 1px solid rgb(72, 72, 241);
+  border: none;
+  border-radius: 5px;
+  padding-top: 5px;
+  padding-right: 10px;
+  padding-bottom: 5px;
+  padding-left: 10px;
+  margin-left: 1px;
+}
+
+input:focus {
+  outline: 1px solid rgb(72, 72, 241);
+}
+
+.color-picker {
+  position: absolute;
+  left: calc(50% - 112.5px);
+}
