--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,25 @@
+:root {
+  --blue: #282988;
+  --lightBlue: #d8d8fa;
+  --beige: #917188;
+  --red: #ee476b;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+  margin: 0;
+  padding: 0;
+}
+
+html {
+  box-sizing: border-box;
+}
+
 html,
 body {
-  overflow: hidden;
+  font-family: sans-serif;
 }
 
 .canvas-wrapper {
@@ -23,19 +42,30 @@ input[type='radio'].visually-hidden {
   overflow: hidden;
 }
 
+a {
+  color: inherit;
+  text-decoration: none;
+  padding: 10px;
+}
+
+a:hover {
+  background-color: var(--beige);
+}
+
 button {
   padding-top: 5px;
   padding-right: 10px;
   padding-bottom: 5px;
   padding-left: 10px;
   background-color: #fff;
-  border: 1px solid rgb(72, 72, 241);
+  border: 1px solid var(--blue);
   border-radius: 5px;
   cursor: pointer;
 }
 
 button:hover {
-  background-color: rgb(213, 213, 255);
+  background-color: var(--beige);
+  color: #fff;
 }
 
 .settings-list {
@@ -49,7 +79,7 @@ button:hover {
 }
 
 input {
-  outline: 1px solid rgb(72, 72, 241);
+  outline: 1px solid var(--blue);
   border: none;
   border-radius: 5px;
   padding-top: 5px;
@@ -60,10 +90,57 @@ input {
 }
 
 input:focus {
-  outline: 1px solid rgb(72, 72, 241);
+  outline: 1px solid var(--blue);
 }
 
 .color-picker {
   position: absolute;
   left: calc(50% - 112.5px);
+}
+
+.landing-page-wrapper {
+  max-width: 1200px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.navigation {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: var(--blue);
+  color: #fff;
+  padding-left: 10px;
+  padding-right: 10px;
+  font-size: 1.5rem;
+}
+
+.navigation small {
+  font-size: 1rem;
+}
+
+.navigation a {
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
+.description-image-container {
+  display: flex;
+  justify-content: space-between;
+  font-size: 1.2rem;
+  margin-top: 150px;
+}
+
+.description {
+  background-color: var(--lightBlue);
+  width: 40%;
+  padding: 50px;
+}
+
+.title {
+  margin-bottom: 20px;
+}
+
+.image {
+  width: 40%;
 }
